<resources>
  <string name="app_name">Desafio - Jera</string>
  <string name="cadastre_se">Cadastre-se</string>
  <string name="finalizar">Finalizar</string>
  <string name="sair">Sair</string>
  <string name="tela_principal">TELA PRINCIPAL</string>
  <string name="autenticacao">AUTENTICAÇÃO</string>
  <string name="e_mail">E-mail:</string>
  <string name="senha">Senha:</string>
  <string name="nome">Nome:</string>
  <string name="nascimento">Nascimento:</string>
  <string name="fazer_login">Fazer login</string>
  <string name="pesquisar">PESQUISAR</string>
  <string name="pesquisar_no_tmdb">Pesquisar no TMDB</string>
  <string name="sem_info_lancamento">Sem informações sobre o lançamento</string>
  <string name="ajuda">Ajuda</string>
  <string name="texto_ajuda">Para adicionar um filme à sua watchlist, basta pesquisar por ele utilizando a barra de pesquisa e o botão \"Pesquisar\"; ao encontrá-lo, clique nele e depois em \"Sim\". Sua watchlist será mostrada quando a barra de pesquisa estiver vazia ou logo após adicionar algo à lista. Para marcar um filme como assistido, clique nele quando estiver vendo a watchlist.</string>
  <string name="texto_ajuda_login">Se você é um usuário novo, preencha os dados e clique em Cadastre-separa prosseguir com o cadastro; após isso, clique em Finalizar. Caso já tenha uma conta, insira as credenciais e clique em Fazer login.</string>
</resources>