<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".AuthActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/label_titulo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/autenticacao"
      android:textAlignment="center"
      android:textSize="24sp" />

    <TextView
      android:id="@+id/label_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:labelFor="@id/input_email"
      android:text="@string/e_mail"
      android:textSize="18sp" />

    <EditText
      android:id="@+id/input_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textEmailAddress" />

    <TextView
      android:id="@+id/label_senha"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/senha"
      android:textSize="18sp" />

    <EditText
      android:id="@+id/input_senha"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPassword" />

    <TextView
      android:id="@+id/label_nome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/nome"
      android:textSize="18sp"
      android:visibility="gone" />

    <EditText
      android:id="@+id/input_nome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="textPersonName"
      android:visibility="gone" />

    <TextView
      android:id="@+id/label_nasc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/nascimento"
      android:textSize="18sp"
      android:visibility="gone" />

    <EditText
      android:id="@+id/input_nasc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:inputType="date"
      android:visibility="gone" />

    <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/texto_ajuda_login"
      android:textSize="18sp" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
      android:id="@+id/btn_cadastro"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10sp"
      android:layout_weight="1"
      android:text="@string/cadastre_se" />

    <Button
      android:id="@+id/btn_login"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10sp"
      android:layout_weight="1"
      android:text="@string/fazer_login" />
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>