<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".HomeActivity">

  <LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <EditText
      android:id="@+id/input_nome_filme"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20sp"
      android:layout_marginTop="40sp"
      android:layout_marginBottom="20sp"
      android:layout_weight="1"
      android:ems="10"
      android:hint="@string/pesquisar_no_tmdb"
      android:inputType="textPersonName" />

  </LinearLayout>

  <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <Button
      android:id="@+id/btn_sair"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10sp"
      android:layout_weight="1"
      android:text="@string/sair" />

    <Button
      android:id="@+id/btn_pesquisar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10sp"
      android:layout_weight="3"
      android:text="@string/pesquisar" />
  </LinearLayout>

  <ListView
    android:id="@+id/lista_principal"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:divider="@null"
    android:dividerHeight="0dp"
    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>